# yapi2js

./: .gitignore  Cargo.toml  README.md
js/: api.ts  compilePath.ts
src/: main.rs  mod.rs  ts_template.rs  ts_types.rs
