[package]
name = "yapi2tsType"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tera = "1"
anyhow = "1"
colored = "2"
clap = { version = "3.1.12", features = ["derive"] }
regex = "1.5.5"
reqwest = "0.11.10"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
